# job_board

api/: .env.example  .gitignore  pyproject.toml
api/apps/accounts/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
api/apps/accounts/migrations/: 0001_initial.py  0002_user_date_joined.py  0003_jobseekerprofile.py  0004_alter_jobseekerprofile_current_address_and_more.py  0005_delete_jobseekerprofile.py
api/apps/dashboard/: urls.py  views.py
api/apps/employers/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
api/apps/employers/migrations/: 0001_initial.py  0002_alter_employerprofile_company_address_and_more.py
api/apps/employers/serializers/: employer.py  social_account.py
api/apps/job_applications/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/apps/job_applications/migrations/: 0001_initial.py  0002_statushistory.py
api/apps/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/jobs/migrations/: 0001_initial.py  0002_alter_job_offer_type.py  0003_job_created_at_job_updated_at.py  0004_job_deadline_job_employer.py  0005_alter_job_employer.py  0006_alter_job_options_job_status.py
api/apps/profiles/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
api/apps/profiles/migrations/: 0001_initial.py  0002_education.py  0003_alter_education_profile_experience.py  0004_socialaccount.py
api/apps/profiles/serializers/: education.py  experience.py  job_seeker.py  (+1 more)
api/apps/utils/: filters.py  paginations.py  permissions.py
api/config/: settings.py  urls.py
(+1 files in other folders)
